# github-battle-bot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/specs/: 2026-05-17-github-battle-bot-design.md
ghbattle/: db.py  formatting.py  github_client.py  groq_client.py  personas.py  scoring.py  types.py
ghbattle/cogs/: battle_cog.py  link_cog.py  roast_cog.py  stats_cog.py
tests/: test_db.py  test_formatting.py  test_github_client.py  test_personas.py  test_scoring.py
