[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-battle-bot"
version = "0.1.0"
description = "Discord bot for friend groups to compare and roast each other's GitHub stats."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["ghbattle*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
